--- a/puppeteer-version/public/index.html
+++ b/puppeteer-version/public/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kahoot Flooder - Puppeteer</title>
     <style>
+        #answer0{
+            background-color: red;
+        }
+        #answer0{
+            background-color: blue;
+        }
+        #answer0{
+            background-color: yellow;
+        }
+        #answer0{
+            background-color: green;
+        }
         body {
             font-family: Arial, sans-serif;
             max-width: 600px;
