--- a/puppeteer-version/public/index.html
+++ b/puppeteer-version/public/index.html
@@ -12,7 +12,7 @@
             background-color: blue;
         }
         #answer2{
-            background-color: yellow;
+            background-color: orange;
         }
         #answer3{
             background-color: green;
